<resources>
    <string name="app_name">ND940C3-Project</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>

    <string name="download_using_glide">Glide - Image Loading Library by BumpTech</string>
    <string name="download_using_load_app">LoadApp - Current repository by Udacity</string>
    <string name="download_using_retrofit">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>

    <string name="download_completed">Download Completed Successfully!</string>
    <string name="download_failed">Download Failed!</string>
    <string name="notification_action_check_status">Check the status</string>

    <string name="select_option">Please select an option to download</string>

    <string name="file_name">File name:</string>
    <string name="download_status_content_description">Download status</string>
    <string name="download_status">Status:</string>
    <string name="ok">OK</string>
    <string name="loading_btn">Loading Button</string>
</resources>
