<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/container_main_scene"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/start_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/end_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <ImageView
        android:id="@+id/banner_image"
        android:layout_width="0dp"
        android:layout_height="196dp"
        android:importantForAccessibility="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_download_archive" />

    <RadioGroup
        android:id="@+id/download_option_radio_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toTopOf="@+id/loading_button"
        app:layout_constraintEnd_toEndOf="@+id/end_guideline"
        app:layout_constraintStart_toStartOf="@+id/start_guideline"
        app:layout_constraintTop_toBottomOf="@+id/banner_image">

        <RadioButton
            style="@style/Widget.LoadingStatus.RadioButton"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:text="@string/download_using_glide" />

        <RadioButton
            style="@style/Widget.LoadingStatus.RadioButton"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/download_using_load_app"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

        <RadioButton
            style="@style/Widget.LoadingStatus.RadioButton"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:text="@string/download_using_retrofit"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />
    </RadioGroup>

    <com.udacity.LoadingButton
        android:id="@+id/custom_button"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="20dp"
        android:contentDescription="@string/loading_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/end_guideline"
        app:layout_constraintStart_toStartOf="@+id/start_guideline"
        app:loadingBackgroundColor="?attr/colorPrimaryDark"
        app:loadingDefaultBackgroundColor="?attr/colorPrimary"
        app:loadingDefaultText="Download"
        app:loadingText="We are loading"
        app:loadingTextColor="@color/white" />

</androidx.constraintlayout.motion.widget.MotionLayout>